--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ repository               : "winstonchen1/winstonchen1.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "head.png"
+  avatar           : "head.jpg"
   name             : "Guo Chen"
   pronouns         : # example: "she/her"  
   bio              : "Undergraduate student of Southwest University, focusing on Retrieval-Augmented Generation and Large Language Models."
